--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: saasblog_production
-  username: saasblog
-  password: <%= ENV['SAASBLOG_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
